--- a/dc-internals/docker-compose.yml
+++ b/dc-internals/docker-compose.yml
@@ -7,9 +7,9 @@ services:
     - ELASTICSEARCH_VERSION=$ELASTICSEARCH_VERSION
     - ELASTICSEARCH_LOCATION=$ELASTICSEARCH_LOCATION
   volumes:
-   - ./elasticsearch/elasticsearch.yml:/usr/share/elasticsearch/config/elasticsearch.yml
-   - ./elasticsearch/readonlyrest.yml:/usr/share/elasticsearch/config/readonlyrest.yml
-   - ./elasticsearch/jvm.options:/usr/share/elasticsearch/config/jvm.options
+   - ../conf/elasticsearch/elasticsearch.yml:/usr/share/elasticsearch/config/elasticsearch.yml
+   - ../conf/elasticsearch/readonlyrest.yml:/usr/share/elasticsearch/config/readonlyrest.yml
+   - ../conf/elasticsearch/jvm.options:/usr/share/elasticsearch/config/jvm.options
   ports:
    - 9200:9200
    - 8888:8888
@@ -21,7 +21,7 @@ services:
     - KIBANA_VERSION=$ELASTICSEARCH_VERSION
     - KIBANA_PLUGIN_LOCATION=$KIBANA_LOCATION
   volumes:
-   - ./kibana/kibana.yml:/usr/share/kibana/config/kibana.yml
+   - ../conf/kibana/kibana.yml:/usr/share/kibana/config/kibana.yml
    - kibana_optimization_data:/usr/share/kibana/optimize
   ports:
    - 5601:5601
@@ -33,7 +33,7 @@ services:
     - KIBANA_VERSION=$ELASTICSEARCH_VERSION
     - KIBANA_PLUGIN_LOCATION=$KIBANA_LOCATION
   volumes:
-   - ./kibana-oss/kibana.yml:/usr/share/kibana/config/kibana.yml
+   - ../conf/kibana-oss/kibana.yml:/usr/share/kibana/config/kibana.yml
    - kibana_oss_optimization_data:/usr/share/kibana/optimize
   ports:
    - 5601:5601
