--- a/dc-internals/docker-compose.yml
+++ b/dc-internals/docker-compose.yml
@@ -10,6 +10,7 @@ services:
    - ../conf/elasticsearch/elasticsearch.yml:/usr/share/elasticsearch/config/elasticsearch.yml
    - ../conf/elasticsearch/readonlyrest.yml:/usr/share/elasticsearch/config/readonlyrest.yml
    - ../conf/elasticsearch/jvm.options:/usr/share/elasticsearch/config/jvm.options
+   - ../conf/elasticsearch/log4j2.properties:/usr/share/elasticsearch/config/log4j2.properties
   ports:
    - 9200:9200
    - 8888:8888
@@ -18,7 +19,7 @@ services:
   build:
    context: ./kibana
    args:
-    - KIBANA_VERSION=$ELASTICSEARCH_VERSION
+    - KIBANA_VERSION=$KIBANA_VERSION
     - KIBANA_PLUGIN_LOCATION=$KIBANA_LOCATION
   volumes:
    - ../conf/kibana/kibana.yml:/usr/share/kibana/config/kibana.yml
@@ -30,7 +31,7 @@ services:
   build:
    context: ./kibana-oss
    args:
-    - KIBANA_VERSION=$ELASTICSEARCH_VERSION
+    - KIBANA_VERSION=$KIBANA_VERSION
     - KIBANA_PLUGIN_LOCATION=$KIBANA_LOCATION
   volumes:
    - ../conf/kibana-oss/kibana.yml:/usr/share/kibana/config/kibana.yml
