--- a/conf/kibana-oss/kibana.yml
+++ b/conf/kibana-oss/kibana.yml
@@ -1,10 +1,8 @@
 server.name: kibana
 server.host: "0"
-#elasticsearch.hosts: [ "http://elasticsearch:9200" ]
-elasticsearch.hosts: [ "http://host.docker.internal:9200" ]
+elasticsearch.hosts: [ "http://${KIBANA_OSS_ELASTICSEARCH_ADDRESS}" ]
 elasticsearch.username: kibana
 elasticsearch.password: kibana
 logging.json: false
 readonlyrest_kbn.cookiePass: '12345678901234567890123456789012'
 readonlyrest_kbn.logLevel: 'debug'
-
