--- a/dc-internals/docker-compose.yml
+++ b/dc-internals/docker-compose.yml
@@ -26,7 +26,7 @@ services:
    - kibana_optimization_data:/usr/share/kibana/optimize
   ports:
    - 5601:5601
-
+   
  kibana-oss:
   build:
    context: ./kibana-oss
@@ -38,6 +38,8 @@ services:
    - kibana_oss_optimization_data:/usr/share/kibana/optimize
   ports:
    - 5601:5601
+  environment:
+   - KIBANA_OSS_ELASTICSEARCH_ADDRESS=$KIBANA_OSS_ELASTICSEARCH_ADDRESS
 
 
 volumes:
